# simple-cpp-python

./: CMakeLists.txt  LICENSE  README.md  __init__.py  code.hh  package.cc  script.py  setup.py  slides.html  slides.md  tests.cc
